syntax = "proto3";

package Shop.Application.DTOs.Response;

option csharp_namespace = "Parstech.Shop.Shared.Protos.Response";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

// ResponseDto
message Response {
  bool is_successed = 1;
  google.protobuf.Value object = 2;
  google.protobuf.Value object2 = 3;
  google.protobuf.Value role = 4;
  google.protobuf.Value current_parameter = 5;
  repeated ValidationFailure errors = 6;
  google.protobuf.StringValue message = 7;
}

// ValidationFailure - simplified version for proto
message ValidationFailure {
  string property_name = 1;
  string error_message = 2;
  string error_code = 3;
  string severity = 4;
}

// ErrorList
message ErrorList {
  string caption = 1;
  string error_message = 2;
}
